# cpp-cmake-template

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json
src/: CMakeLists.txt  foo.cpp
test/: CMakeLists.txt
tool/cmake/: enable_memcheck.cmake  enable_sanitizers.cmake  env.cmake  install_gtest.cmake  set_compile_props.cmake  set_target_compile_feature.cmake  set_target_compile_props.cmake  set_warnings_as_errors.cmake
